Make sure invalid-tooltip is visibile with BS4

--- a/frontend_forms/static/frontend_forms/css/frontend_forms.css
+++ b/frontend_forms/static/frontend_forms/css/frontend_forms.css
@@ -207,6 +207,10 @@ form .field-with-errors .form-check.has-error .invalid-tooltip {
     display: block;
 }
 
+form .field-with-errors .invalid-tooltip {
+    display: block;
+}
+
 form .form-group.is_hidden {
     display: none;
 }
